samples/_failures_safe/1761639483_5a0ee6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ef31a52.c: In function ‘main’:
./samples/SAFE/__tmp_0ef31a52.c:126:18: error: expected ‘;’ at end of input
  126 |     init_analyzer
      |                  ^
      |                  ;
./samples/SAFE/__tmp_0ef31a52.c:126:5: error: expected declaration or statement at end of input
  126 |     init_analyzer
      |     ^~~~~~~~~~~~~
